templates/pritunl-vpn_template.yaml
---
# Source: pritunl-vpn/templates/service.tpl
apiVersion: v1
kind: Service
metadata:
  name: pritunl-vpn-http
  namespace: pritunl-vpn
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9700
      targetPort: 9700
  selector:
    app: pritunl-vpn
---
# Source: pritunl-vpn/templates/service.tpl
apiVersion: v1
kind: Service
metadata:
  name: pritunl-vpn-udp
  namespace: pritunl-vpn
spec:
  type: NodePort
  ports:
    - name: udp
      port: 31194
      protocol: UDP
      targetPort: 31194
      nodePort: 31194
  selector:
    app: pritunl-vpn
---
# Source: pritunl-vpn/templates/deployment.tpl
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pritunl-vpn
  namespace: pritunl-vpn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pritunl-vpn
  template:
    metadata:
      labels:
        app: pritunl-vpn
    spec:
      restartPolicy: Always
      containers:
        - name: pritunl
          image: goofball222/pritunl:1.32.3602.80
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 512Mi
          ports:
            - containerPort: 31194
              protocol: UDP
            - containerPort: 9700
---
# Source: pritunl-vpn/templates/ingress.tpl
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pritunl-vpn-dashboard
  namespace: pritunl-vpn
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pritunl-vpn-http
                port:
                  number: 9700
  tls:
    - hosts:
        - example.com
      secretName: example-tls-secret
